--- a/examples/urban_driver/config.yaml
+++ b/examples/urban_driver/config.yaml
@@ -75,6 +75,6 @@ data_generation_params:
 ###################
 ## Train params
 train_params:
-  checkpoint_every_n_steps: 10000
-  max_num_steps: 5
+  checkpoint_every_n_steps: 5000
+  max_num_steps:  1.0e+8 # 1e8
   eval_every_n_steps: 10000
