--- a/scripts/offline_rl_config.yaml
+++ b/scripts/offline_rl_config.yaml
@@ -23,9 +23,9 @@ model_params:
 ## Data loader options
 train_data_loader:
   key: "scenes/train.zarr"
-  batch_size: 12
+  batch_size: 16
   pred_len: 10   #prediction horizon
-  shuffle: False
+  shuffle: True
   num_workers: 2
   ###################
   ## Only used for open-loop models
@@ -33,8 +33,8 @@ train_data_loader:
 
 val_data_loader:
   key: "scenes/validate_0.zarr"
-  batch_size: 12
-  shuffle: False
+  batch_size: 16
+  shuffle: True
   num_workers: 2
 
 ###################
