--- a/scripts/offline_rl_config.yaml
+++ b/scripts/offline_rl_config.yaml
@@ -32,7 +32,7 @@ train_data_loader:
   perturb_probability: 0.5
 
 val_data_loader:
-  key: "scenes/validate_0.zarr"
+  key: "scenes/train.zarr"
   batch_size: 16
   shuffle: True
   num_workers: 2
