--- a/scripts_/offline_rl_config.yaml
+++ b/scripts_/offline_rl_config.yaml
@@ -31,6 +31,7 @@ train_data_loader:
   ## Only used for open-loop models
   perturb_probability: 0.5
 
+  yaml:
 val_data_loader:
   key: "scenes/train.zarr"
   batch_size: 16
@@ -76,6 +77,6 @@ data_generation_params:
 ###################
 ## Train params
 train_params:
-  checkpoint_every_n_steps: 5000
+  checkpoint_every_n_steps: 1000
   max_num_steps:  1.0e+8 # 1e8
-  eval_every_n_steps: 10
+  eval_every_n_steps: 1000
