--- a/scripts/offline_rl_config.yaml
+++ b/scripts/offline_rl_config.yaml
@@ -19,6 +19,8 @@ model_params:
   warmup_num_frames: 0 # "sample" warmup_num_steps by following the model's policy
   discount_factor: 0.8 # discount future timesteps via discount_factor**t
 
+  render_ego_history: True
+
 ###################
 ## Data loader options
 train_data_loader:
@@ -38,20 +40,73 @@ val_data_loader:
   shuffle: True
   num_workers: 2
 
+####################
+### Input raster parameters
+#raster_params:
+#  # the keys are relative to the dataset environment variable
+#  semantic_map_key: "semantic_map/semantic_map.pb"
+#  dataset_meta_key: "meta.json"
+#
+#  # e.g. 0.0 include every obstacle, 0.5 show those obstacles with >0.5 probability of being
+#  # one of the classes we care about (cars, bikes, peds, etc.), >=1.0 filter all other agents.
+#  filter_agents_threshold: 0.5
+#
+#  # whether to completely disable traffic light faces in the semantic rasterizer
+#  # this disable option is not supported in avsw_semantic
+#  disable_traffic_light_faces: False
+
+
+
 ###################
 ## Input raster parameters
 raster_params:
   # the keys are relative to the dataset environment variable
+#  semantic_map_key: "semantic_map/semantic_map.pb"
+#  dataset_meta_key: "meta.json"
+#
+#  # e.g. 0.0 include every obstacle, 0.5 show those obstacles with >0.5 probability of being
+#  # one of the classes we care about (cars, bikes, peds, etc.), >=1.0 filter all other agents.
+#  filter_agents_threshold: 0.5
+#
+#  # whether to completely disable traffic light faces in the semantic rasterizer
+#  # this disable option is not supported in avsw_semantic
+#  disable_traffic_light_faces: False
+
+  # raster image size [pixels]
+  raster_size:
+    - 224
+    - 224
+  # raster's spatial resolution [meters per pixel]: the size in the real world one pixel corresponds to.
+  pixel_size:
+    - 0.5
+    - 0.5
+  # From 0 to 1 per axis, [0.5,0.5] would show the ego centered in the image.
+  ego_center:
+    - 0.5
+    - 0.5
+# todo
+#  map_type: "py_semantic"
+  map_type: "py_satellite"
+
+  # the keys are relative to the dataset environment variable
+  satellite_map_key: "aerial_map/aerial_map.png"
   semantic_map_key: "semantic_map/semantic_map.pb"
   dataset_meta_key: "meta.json"
 
   # e.g. 0.0 include every obstacle, 0.5 show those obstacles with >0.5 probability of being
   # one of the classes we care about (cars, bikes, peds, etc.), >=1.0 filter all other agents.
-  filter_agents_threshold: 0.5
+  filter_agents_threshold: 0.8
 
   # whether to completely disable traffic light faces in the semantic rasterizer
-  # this disable option is not supported in avsw_semantic
   disable_traffic_light_faces: False
+
+  # When set to True, the rasterizer will set the raster origin at bottom left,
+  # i.e. vehicles are driving on the right side of the road.
+  # With this change, the vertical flipping on the raster used in the visualization code is no longer needed.
+  # Set it to False for models trained before v1.1.0-25-g3c517f0 (December 2020).
+  # In that case visualisation will be flipped (we've removed the flip there) but the model's input will be correct.
+  set_origin_to_bottom: True
+
 
 ###################
 ## VectorNet Params
