--- a/scripts/offline_rl_config.yaml
+++ b/scripts/offline_rl_config.yaml
@@ -37,7 +37,7 @@ train_data_loader:
 val_data_loader:
   key: "scenes/train.zarr"
   batch_size: 16
-  shuffle: True
+  shuffle: False
   num_workers: 2
 
 ####################
@@ -132,6 +132,6 @@ data_generation_params:
 ###################
 ## Train params
 train_params:
-  checkpoint_every_n_steps: 100
+  checkpoint_every_n_steps: 500
   max_num_steps:  1.0e+8 # 1e8
-  eval_every_n_steps: 100
+  eval_every_n_steps: 500
