--- a/scripts/vect_multimodal_task_config.yaml
+++ b/scripts/vect_multimodal_task_config.yaml
@@ -95,14 +95,14 @@ data_generation_params:
 ###################
 ## Data loader options
 train_data_loader:
-  key: "scenes/sample.zarr"
+  key: "scenes/sample.zarr"  # "scenes/sample.zarr" validate
   batch_size: 16  # 12 24
   shuffle: True
   num_workers: 2  # 16 2
   pred_len: 10
 
 val_data_loader:
-  key: "scenes/sample.zarr"
+  key: "scenes/sample.zarr"  # "scenes/sample.zarr"
   batch_size: 16  # 12 24
   shuffle: False
   num_workers: 2  # 16 2
