--- a/examples/RL/gym_config.yaml
+++ b/examples/RL/gym_config.yaml
@@ -52,6 +52,9 @@ raster_params:
 ## Data loader options
 train_data_loader:
   key: "scenes/sample.zarr"
+  # batch_size: 64  # Use the same batch size of RL rollout buffer
+  shuffle: True
+  num_workers: 4  # 4 16
 
 val_data_loader:
   key: "scenes/sample.zarr"
@@ -59,8 +62,8 @@ val_data_loader:
 ###################
 ## Gym params
 gym_params:
-  max_scene_id: 1  # 100 1
-  max_val_scene_id: 1  # 100 1
+  max_scene_id: 100  # 100 1
+  max_val_scene_id: 100  # 100 1
   randomize_start_frame: True  # False
-  overfit: True
-  overfit_id: 0
+  overfit: True  # 强制限定一个场景id 过拟合
+  overfit_id: 39  # 弯道
