--- a/examples/planning/config.yaml
+++ b/examples/planning/config.yaml
@@ -6,7 +6,7 @@ format_version: 4
 model_params:
   model_architecture: "resnet50"
 
-  history_num_frames: 0
+  history_num_frames: 1  # 0
   future_num_frames: 12
   step_time: 0.1
   render_ego_history: True
@@ -16,8 +16,8 @@ model_params:
 raster_params:
   # raster image size [pixels]
   raster_size:
-    - 224
-    - 224
+    - 112  # 224
+    - 112  # 224
   # raster's spatial resolution [meters per pixel]: the size in the real world one pixel corresponds to.
   pixel_size:
     - 0.5
