--- a/examples/RL/pred_ppo_config.yaml
+++ b/examples/RL/pred_ppo_config.yaml
@@ -55,6 +55,7 @@ train_data_loader:
   # batch_size: 64  # Use the same batch size of RL rollout buffer
   shuffle: True
   num_workers: 4  # 4 16
+  perturbation: True
 
 val_data_loader:
   key: "scenes/sample.zarr"
@@ -62,8 +63,8 @@ val_data_loader:
 ###################
 ## Gym params
 gym_params:
-  max_scene_id: 100  # 100 1
-  max_val_scene_id: 100  # 100 1
+  max_scene_id: 40  # 100 1 40
+  max_val_scene_id: 40  # 100 1 40
   randomize_start_frame: True  # False
-  overfit: True  # 强制限定一个场景id 过拟合
+  overfit: True  # 结合上面最大场景号为40-1，可以强制限定一个场景id 39，实现过拟合方便调试
   overfit_id: 39  # 路口弯道
